2006-09-19  Stepan Kasal  <kasal@ucw.cz>

	* lib/autoconf/libs.m4 (AH_CHECK_LIB): Fix quoting, to be
	  consistent with _AH_CHECK_FUNCS and _AH_CHECK_HEADERS.
	* lib/autoconf/headers.m4 (AH_CHECK_HEADERS_DIRENT): Likewise.

2006-09-15  Stepan Kasal  <kasal@ucw.cz>

	* lib/autoconf/functions.m4 (AC_FUNC_GETMNTENT): Eliminate the
	expansion of AC_CHECK_FUNCS.

2006-09-14  Stepan Kasal  <kasal@ucw.cz>

	* lib/autoconf/general.m4 (AC_CONFIG_MACRO_DIR): Remove a
	mistaken comment: the path has to be relative; do not use
	the path at runtime.

2006-09-13  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/autoconf/status.m4 (_AC_OUTPUT_SUBDIRS): Quote the
	argument to `--prefix' for sub-configure scripts.
	Pass `--silent' to sub-configure scripts.
	* tests/torture.at (Configuring subdirectories): Add tests
	for both changes.
	* doc/autoconf.texi (Setting Output Variables): Fix example to
	not show `--silent' being passed to a `configure' re-run.

2006-09-12  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/autoconf.texi (Input): Clarify role of AC_CONFIG_MACRO_DIR.
	* lib/autoconf/general.m4 (AC_CONFIG_MACRO_DIR): Do not check
	for the existence of the directory at configure-time.  That's
	too late, anyway.  Problem reported by Stefan Seefeld.

	* lib/m4sugar/m4sh.m4 (_AS_TEST_PREPARE): Avoid bug in UnixWare
	7.1.4 /usr/bin/posix/sh described by Tim Rice in
	<http://lists.gnu.org/archive/html/bug-autoconf/2006-09/msg00017.html>.

2006-09-11  Stepan Kasal  <kasal@ucw.cz>

	* tests/local.at (AT_CHECK_M4): Fix this so that the testsuite
	works with GNU M4 1.4.3 again; make the normalized form
	match the current m4 message; fix the description.
	* test/tools.at (autom4te cache): Adapt to the change.

2006-09-08  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/autoconf/functions.m4 (AC_FUNC_MKTIME):  Add year_2050_test
	to catch glibc bug 2821
	<http://sourceware.org/bugzilla/show_bug.cgi?id=2821>.

	Merge from gnulib as follows: Use AC_CHECK_HEADERS_ONCE instead of