@@ -448,7 +448,7 @@ sub handle_m4 ($@)
 {
   my ($req, @macro) = @_;
 
-  # GNU m4 appends when using --error-output.
+  # GNU m4 appends when using --debugfile/--error-output.
   unlink ($tcache . $req->id . "t");
 
   # Run m4.
@@ -461,7 +461,7 @@ sub handle_m4 ($@)
 	   . join (' --include=', '', @include)
 	   . ' --debug=aflq'
 	   . (!exists $ENV{'AUTOM4TE_NO_FATAL'} ? ' --fatal-warning' : '')
-	   . " --error-output=$tcache" . $req->id . "t"
+	   . " @M4_DEBUGFILE@=$tcache" . $req->id . "t"
 	   . join (' --trace=',   '', sort @macro)
 	   . " " . files_to_options (@ARGV)
 	   . ' </dev/null'
